--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>the big mac 2</title>
+  <title>The Real McDonald's Big Mac Price - 2025</title>
   
 
 </head>
@@ -53,7 +53,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-yellow-400" viewBox="0 0 20 20" fill="currentColor">
                   <path d="M10 2a4 4 0 00-4 4v1H5a1 1 0 00-.993.883L4 8v9a1 1 0 001 1h10a1 1 0 001-1V8l-.007-.117A1 1 0 0015 7h-1V6a4 4 0 00-4-4zm0 2a2 2 0 012 2v1H8V6a2 2 0 012-2zM6 8h8v2H6V8zm0 3h8v2H6v-2zm0 3h8v2H6v-2z" />
                 </svg>
-                <span class="text-xl font-bold tracking-tight">Burger Blog</span>
+                <span class="text-xl font-bold tracking-tight">McDonald's Big Mac</span>
             </div>
             <nav class="hidden md:flex space-x-6 font-semibold">
                 <a href="#price" class="hover:text-yellow-300 transition duration-300">Price</a>
