--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <div class="container mx-auto px-6">
                  <div class="lg:flex lg:items-center lg:space-x-12 lg:flex-row-reverse">
                     <div class="lg:w-1/2">
-                        <h2 class="text-3xl md:text-4xl font-bold text-gray-800">The Twist: Chicken Big Mac</h2>
+                        <h2 class="text-3xl md:text-4xl font-bold text-gray-800">The Twist: <a href="https://mcdonalds-menu-prices.us/mcdonalds-chicken-big-mac-price/">Chicken Big Mac</a></h2>
                         <p class="mt-4 text-lg text-gray-600">Just when you thought the Big Mac couldn't be reinvented, they swapped the beef for two crispy tempura chicken patties. It’s a fantastic change of pace, offering a satisfying crunch that contrasts beautifully with the classic special sauce. If you see this limited-time offer, don't hesitate to try it.</p>
                     </div>
                     <div class="lg:w-1/2 mt-8 lg:mt-0 flex justify-center">
