--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             </div>
             <nav class="hidden md:flex space-x-6 font-semibold">
                 <a href="#price" class="hover:text-yellow-300 transition duration-300">Price</a>
+                <a href="https://mcdonalds-menu-prices.us/">McDonald's Menu Prices</a>
                 <a href="#deals" class="hover:text-yellow-300 transition duration-300">Deals</a>
                 <a href="#chicken" class="hover:text-yellow-300 transition duration-300">Chicken Big Mac</a>
                 <a href="#double" class="hover:text-yellow-300 transition duration-300">Double Big Mac</a>
